correct naming and alignment

--- a/web_home/css_home/bootstrap.css
+++ b/web_home/css_home/bootstrap.css
@@ -3163,7 +3163,7 @@ tbody.collapse.show {
   margin: 0.125rem 0 0;
   font-size: 1rem;
   color: #212529;
-  text-align: left;
+  text-align: center;
   list-style: none;
   background-color: #fff;
   background-clip: padding-box;
